No alert with theme

--- a/SimplyBig/sbig-v3.html
+++ b/SimplyBig/sbig-v3.html
@@ -327,7 +327,7 @@
 				themeStr += GColor.shortHex($('#cp-'+x.replace('2','')).val().replace(/#/, ''));
 			});
 			settings.color_theme = themeStr;
-			alert(themeStr);
+			//alert(themeStr);
 		}
 	}
 
